# Exercises-for-3D-Scanning-and-Motion-Capture

./: .gitignore  README.md
Exercise-0/: CMakeLists.txt  main.cpp  output.txt
Exercise-0/lib/: algo.h
Exercise-1/: main.cpp
Exercise-2/: ImplicitSurface.h  MarchingCubes.h  main.cpp
Exercise-3/: ProcrustesAligner.h
Exercise-3_sol/: CMakeLists.txt  ProcrustesAligner.h  main.cpp
Exercise-4/: CMakeLists.txt  dragon.cpp  gaussian.cpp  surface.cpp
